--- a/src/routes/+styles.css
+++ b/src/routes/+styles.css
@@ -5,6 +5,11 @@
     background-color: #ffffff;
 }
 
+.downarrow {
+    width: 50px;
+    height: 30px;
+}
+
 .home-page .text-section {
     position: absolute;
     width: 1196px;
