--- a/src/routes/gallery/[longName]/+styles.css
+++ b/src/routes/gallery/[longName]/+styles.css
@@ -108,6 +108,6 @@
     font-weight: 400;
     color: #000000;
     font-size: 15px;
-    letter-spacing: 0;
+    letter-spacing: 0.61px;
     line-height: normal;
 }
