Added search functionality and removed any trace of... _accounts_ (dun dun DUUUUN) 🤮

--- a/src/routes/app-bar.css
+++ b/src/routes/app-bar.css
@@ -109,6 +109,7 @@
     left: 0;
     background-color: #8dd022;
     border-radius: 10px 0px 0px 10px;
+    border: none;
 }
 
 .app-bar .search-wrapper:active {
