--- a/src/routes/submit-species/+styles.css
+++ b/src/routes/submit-species/+styles.css
@@ -96,6 +96,7 @@
     border: 3px solid;
     border-color: #c4c4c4;
     resize: none;
+    font-family: "Josefin Sans", Helvetica;
 }
 
 .box .submit {
